Moved key to left, fixed spacing for tooltip headers. Index.php and base.css

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -207,6 +207,10 @@ div.candidate:last-child {border-bottom: 0px none;}
   pointer-events: none;
 }
 
+#tooltip-precinct-title {
+  float: left;
+}
+
 #map-target {
   width: 100%;
   height: 100%;
@@ -218,7 +222,7 @@ div.candidate:last-child {border-bottom: 0px none;}
   position: absolute;
   z-index: 200;
   bottom: 15px;
-  right: 15px;
+  left: 15px;
   background-color: #fff;
   border: 1px solid #ccc;
   font-size: 14px;
